# rattler_build_test

./: .cruft.json  .gitignore  MANIFEST.in  pyproject.toml
.github/workflows/: build-darwin.yaml  build-linux.yaml  build-windows.yaml
ci/conda/: conda-pkg-patch.yaml
recipe/: recipe.yaml
src/rattler_build_test/: __init__.py  cli.py  version.txt
tests/: conftest.py  test_build.py
